# amphi

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: linux.yml
src/: lib.rs  parse.rs  visit.rs
src/visit/: attr.rs  mod.rs
tests/: test.rs  unit-test-util.rs
tests/ui/: 01-flat_mod.rs  02-sync_only.rs  03-async_only.rs  04-unit_test_util.rs  05-differentiate_sync_async.rs
tests/ui/test_fail/: 01-sync_only.rs  01-sync_only.stderr  02-async_only.rs  02-async_only.stderr  03-amphi_option_gt2.rs  03-amphi_option_gt2.stderr  04-amphi_option_both_async_blocking.rs  04-amphi_option_both_async_blocking.stderr  05-absolute_path.rs  05-absolute_path.stderr
