[package]
name = "amphisbaena"
version = "0.1.0"
authors = ["Guoli Lyu <guoli-lv@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/fMeow/amphisbaena-rs"
documentation = "https://docs.rs/amphisbaena"
keywords = ["async", "futures", "macros", "proc_macro"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["visit-mut", "full"]

[lib]
proc-macro = true