[package]
name = "amphi"
version = "0.1.0"
authors = ["Guoli Lyu <guoli-lv@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/fMeow/amphi"
documentation = "https://docs.rs/amphi"
keywords = ["async", "macros", "proc_macro"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["visit-mut", "full"]

[lib]
proc-macro = true