[package]
name = "amphi"
version = "0.1.0"
authors = ["Guoli Lyu <guoli-lv@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/fMeow/amphi"
documentation = "https://docs.rs/amphi"
keywords = ["async", "macros", "proc_macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["visit-mut", "full"]

[dev-dependencies]
async-trait = "0.1"

[dev-dependencies.trybuild]
version = "1"
features = [ "diff" ]

[dev-dependencies.async-std]
version = "1"
features = [ "attributes" ]

[dev-dependencies.tokio]
version = "0.3.4"
features = [ "macros", "rt-core" ]
